# marfs

./: .gitignore  .gitmodules  .readthedocs.yml  COPYRIGHT.h  Dockerfile  LICENSE.txt  Makefile.am  README.md  autogen.sh  buildrpm.sh  configure.ac  do_build.sh  env-example  example-marfs-config.xml  marfs.spec  marfs.spec.in  marfs_configuration_blueprint.cfg
common/configuration/src/: Makefile  Makefile.am  PA2X_interface.c  PA2X_interface.h  marfs_cctest.cfg  marfs_cctest.cfg.mpi  marfs_cctest.cfg.t_island  marfs_cctest_blueprint.cfg  marfs_config.c  marfs_configuration.c  marfs_configuration.h  marfs_configuration_blueprint.cfg  marfs_odsu.cfg  mdal.c  mdal.h  on_the_laptop.cfg  test_marfs_configuration.c  test_marfsconfigrc.c
fuse/src/: MDAL.c  MDAL.h  Makefile  Makefile.am  README  RUN  add_namespace.c  check_trunc  common.c  common.h  config.c  config.h  dal.c  dal.h  demo_read_chunkinfo.c  demo_read_write_xattrs2.c  hello.c  hello2.c  hello3.c  logging.h  main.c  make_gc_data  make_packed  marfs_base.c  marfs_base.h  marfs_base_static_config.c  marfs_base_static_config.h  marfs_config.c  marfs_configuration.c  marfs_configuration.h  marfs_fuse.c  marfs_fuse.h  marfs_ops.c  marfs_ops.h  marfs_pipe_main.c  mc_hash.c  mc_hash.h  mc_hash_test.c  mdal.c  mdal.h  (+13 more)
obj_scanner/: Cargo.toml
obj_scanner/src/: main.rs  tests.rs
src/: Makefile.am  generic.c  generic.h  stamp-h2
src/api/: Makefile.am  marfs.c  marfs.h
src/api/testing/: config.xml  test_marfsapi.c
src/config/: Makefile.am  config.c  config.h  config_internal.h  marfs_cctest.cfg  marfs_configuration.c  marfs_configuration_blueprint.cfg  verifyconf.c
src/config/testing/: config.xml  test_config.c
src/core/: common.c  common.h  marfs_base.c  marfs_base.h  marfs_ops.c  marfs_ops.h
src/dal/: Makefile.am  dal.c  dal.h  dalverify.c  emergency_rebuild.c  fuzzing_dal.c  metainfo.c  metainfo.h  noop_dal.c  object_stream.h  posix_dal.c  rec_dal.c  s3_dal.c  timer_dal.c  timing_hist.r  treetest.c
src/dal/testing/: config.xml  fuzzing_config.xml  noop_config.xml  oflags_config.xml  test_dal.c  test_dal_abort.c  test_dal_fuzzing.c  test_dal_fuzzing_put.c  test_dal_migrate.c  test_dal_noop.c  test_dal_oflags.c  test_dal_s3.c  test_dal_s3_abort.c  test_dal_s3_migrate.c  test_dal_s3_multipart.c  test_dal_s3_verify.c  test_dal_timer.c  test_dal_timer_abort.c  test_dal_timer_migrate.c  test_dal_verify.c  timer_config.xml  verify_config.xml
src/datastream/: Makefile.am  datastream.c  datastream.h  streamutil.c  streamwalker.c
src/datastream/testing/: config.xml  rebuilds_config.xml  test_datastream.c  test_datastream_rebuilds.c  test_datastream_repack.c  test_rebuilds.c
src/datastructs/hashtable/: hash_table.c  hash_table.h
src/frameworks/hash_table/: hash_table.c
src/frameworks/thread_queue/: thread_queue.c
src/fuse/: Makefile.am  change_user.c  change_user.h  fuse.c  main.c
src/general_include/: crc.c  numdigits.h  restrictedchars.h
src/generic/: numdigits.h
src/hash/: Makefile.am  hash.c  hash.h  mc_hash.h  mc_hash_test.c
src/hash/testing/: test_hash_distribution.c  test_hash_lookup.c
src/io/: Makefile.am  io.h  ioqueue.c  iothreads.c
src/io/testing/: bufferfuncs.c  config.xml  test_ioqueue.c  test_iothreads.c
src/isal_benchmark/: Makefile.am  README.md  ec_parallel_benchmark.c  ec_rdma_client.c
src/locks/: marfs_locks.c  marfs_locks.h  spinlock_asm.s
src/logging/: Makefile.am  logging.c  logging.h
src/mdal/: Makefile.am  mdal.c  mdal.h  posix_mdal.c
src/mdal/testing/: posix_config.xml  test_posix_mdal.c
src/mimosa/: Makefile.am  hardlink.c  hardlink.h  list.c  list.h  mimosa.c  mimosa.h  mimosa_gufi.h  mimosa_logging.h  mimosa_parser.c
src/mustang/: Makefile  Makefile.am  README.md  hashtable.c  hashtable.h  id_cache.c  id_cache.h  id_list.c  id_list.h  mustang  mustang_engine.c  mustang_logging.h  mustang_runner  mustang_threading.c  mustang_threading.h  task_queue.c  task_queue.h
src/namespace/: namespace.c  namespace.h
src/ne/: Makefile.am  erasurePerf.c  ne.c  ne.h  neutil.c
src/ne/testing/: config.xml  corrupt_block.c  data_shredder.c  erasureTest  extra_config.xml  fuzzing_config.xml  perf_config.xml  s3_config.xml  test_libne_fuzzing.c  test_libne_io.c  test_libne_noop.c  test_libne_s3.c  test_libne_seek.c  test_libne_seek_config.xml  test_libne_timer.c
src/recovery/: Makefile.am  recovery.c  recovery.h
src/recovery/testing/: test_recovery.c
src/recursion/: Makefile.am  dal  ne  thread_queue
src/recursion/testing/: rec_config.xml  test_dal_rec.c  test_dal_rec_abort.c  test_libne_rec.c
src/rsrc_mgr/: Makefile.am  common.h  consts.h  find_namespaces.c  find_namespaces.h  findoldlogs.c  findoldlogs.h  gc.c  loginfo.h  logline.c  logline.h  manager.c  manager.h  new_rsrc_mgr.c  output_program_args.c  output_program_args.h  outputinfo.c  outputinfo.h  parse_program_args.c  parse_program_args.h  quota.c  read_last_log.c  read_last_log.h  rebuild.c  reftracker.c  repack.c  repack.h  repackstreamer.c  resourceinput.c  resourceinput.h  resourcelog.c  resourcelog.h  resourcemanager.c  resourceprocessing.c  resourceprocessing.h  resourcethreads.c  resourcethreads.h  rmanstate.c  rmanstate.h  rpkstreamer.c  (+12 more)
src/rsrc_mgr/testing/: config.xml  config_nopack.xml  test_resourcelog.c  test_resourceprocessing.c  test_resourcethreads.c  test_rsrc_mgr.c  test_rsrc_mgr_nopack.c
src/scripts/: full-spectrum-erasure-test
src/stream/: stream.c  stream.h
src/tagging/: Makefile.am  tagging.c  tagging.h
src/tagging/testing/: test_tagging.c
src/thread_queue/: Makefile.am  thread_queue.c  thread_queue.h
utilities/: Makefile.am
utilities/allocation-management/: marfs_gc.c  marfs_gc.h
utilities/common/: perm_test  trash_cleanup
utilities/gpfs/: histo.c  marfs_gc.c  marfs_gc.h  marfs_gc_README  marfs_packer.c  marfs_packer_README  marfs_quota.c  marfs_quota.h  marfs_quota_README  marfs_repack.c  utilities_common.c  utilities_common.h
utilities/multi-component/: drebuilder.c  mc_path_convert.c  mc_ring.c  rebuilder.c
utilities/pipetool/: pipetool  pipetool_remote
(+265 files in other folders)
